--- a/scss/style.scss
+++ b/scss/style.scss
@@ -122,7 +122,7 @@ header {
         margin-top: 3rem;
 
         span {
-            color: $primary-color;
+            color: $secondary-color;
         }
 
         h1 {
